# mandelbrot_set

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  mandelbrot_view.cpp  mandelbrot_view.hpp
